--- a/Grupo 3/index.html
+++ b/Grupo 3/index.html
@@ -53,11 +53,11 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="layout-static.html">Blogs</a>
+                                    <a class="nav-link" href="Blog.html">Blogs</a>
                                 </nav>
 
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="layout-static.html">Articulos</a>
+                                    <a class="nav-link" href="Blog.html">Articulos</a>
                                 </nav>
 
 
