--- a/Grupo 3/Psicologos.html
+++ b/Grupo 3/Psicologos.html
@@ -99,7 +99,7 @@
                                 <i class="fas fa-user me-1"></i> Dr. Laura Martínez
                             </div>
                             <div class="card-body">
-                                <img src="path/to/laura_martinez.jpg" alt="Dr. Laura Martínez" class="img-fluid mb-3" style="max-width: 150px;">
+                                <img src="Imagenes/Mujer 1.jpg" alt="Dr. Laura Martínez" class="img-fluid mb-3" style="max-width: 150px;">
                                 <p><strong>Teléfono:</strong> <a href="tel:+50688887777">+506 8888 7777</a></p>
                                 <p><strong>Correo:</strong> <a href="mailto:laura.martinez@psicologia.com">laura.martinez@psicologia.com</a></p>
                                 <p><strong>Descripción:</strong> Psicóloga clínica con más de 12 años de experiencia en salud mental, especializada en el tratamiento de ansiedad, depresión y manejo de estrés. Ayuda a los pacientes a encontrar bienestar emocional mediante la terapia cognitivo-conductual.</p>
@@ -120,7 +120,7 @@
                                 <i class="fas fa-user me-1"></i> Dr. Carlos Gómez
                             </div>
                             <div class="card-body">
-                                <img src="path/to/carlos_gomez.jpg" alt="Dr. Carlos Gómez" class="img-fluid mb-3" style="max-width: 150px;">
+                                <img src="Imagenes/Hombre 1.jpg" alt="Dr. Carlos Gómez" class="img-fluid mb-3" style="max-width: 150px;">
                                 <p><strong>Teléfono:</strong> <a href="tel:+50677776666">+506 7777 6666</a></p>
                                 <p><strong>Correo:</strong> <a href="mailto:carlos.gomez@psicologia.com">carlos.gomez@psicologia.com</a></p>
                                 <p><strong>Descripción:</strong> Psicólogo con enfoque en salud mental y bienestar emocional. Especializado en terapia de pareja, manejo de estrés y resolución de conflictos emocionales. Ayuda a sus pacientes a mejorar su calidad de vida y gestionar sus emociones.</p>
@@ -141,7 +141,7 @@
                                 <i class="fas fa-user me-1"></i> Dra. Sofía Rodríguez
                             </div>
                             <div class="card-body">
-                                <img src="path/to/sofia_rodriguez.jpg" alt="Dra. Sofía Rodríguez" class="img-fluid mb-3" style="max-width: 150px;">
+                                <img src="Imagenes/Mujer 2.jpg" alt="Dra. Sofía Rodríguez" class="img-fluid mb-3" style="max-width: 150px;">
                                 <p><strong>Teléfono:</strong> <a href="tel:+50699998888">+506 9999 8888</a></p>
                                 <p><strong>Correo:</strong> <a href="mailto:sofia.rodriguez@psicologia.com">sofia.rodriguez@psicologia.com</a></p>
                                 <p><strong>Descripción:</strong> Psicóloga especializada en salud mental y bienestar emocional con más de 8 años de experiencia. Trabaja con personas que enfrentan problemas emocionales y ofrece apoyo en crisis, estrés postraumático, depresión y ansiedad.</p>
@@ -162,7 +162,7 @@
                                 <i class="fas fa-user me-1"></i> Dr. José Pérez
                             </div>
                             <div class="card-body">
-                                <img src="path/to/jose_perez.jpg" alt="Dr. José Pérez" class="img-fluid mb-3" style="max-width: 150px;">
+                                <img src="Imagenes/Hombre 2.jpg" alt="Dr. José Pérez" class="img-fluid mb-3" style="max-width: 150px;">
                                 <p><strong>Teléfono:</strong> <a href="tel:+50655554444">+506 5555 4444</a></p>
                                 <p><strong>Correo:</strong> <a href="mailto:jose.perez@psicologia.com">jose.perez@psicologia.com</a></p>
                                 <p><strong>Descripción:</strong> Psicólogo con enfoque en salud mental, especializado en trastornos de ansiedad, depresión y trauma. Utiliza la terapia basada en la evidencia para ayudar a sus pacientes a superar sus desafíos emocionales y a desarrollar un bienestar duradero.</p>
