--- a/Grupo 3/BienestarEmocional.html
+++ b/Grupo 3/BienestarEmocional.html
@@ -81,7 +81,7 @@
 
                             <a class="nav-link" href="charts.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                                Mi diario!
+                                Libros!
                             </a>
                             <a class="nav-link" href="tables.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
