--- a/Grupo 3/index.html
+++ b/Grupo 3/index.html
@@ -62,15 +62,15 @@
 
 
                             </div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                            <a class="nav-link" href="Historias.html">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Historias Motivadoras!
-                               
+                            </a>
 
                                 
-                            <a class="nav-link" href="charts.html">
+                            <a class="nav-link" href="Libros.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                                Mi diario!
+                                Libros!
                             </a>
                             <a class="nav-link" href="tables.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
