--- a/Grupo 3/index.html
+++ b/Grupo 3/index.html
@@ -90,21 +90,21 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="image1.jpg" class="d-block w-100" alt="Imagen 1">
+                            <img src="Imagenes/imagindex1.jpg" class="d-block w-100" alt="Imagen 1">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Bienestar Emocional</h5>
                                 <p>Promovemos el equilibrio y la paz interior.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="image2.jpg" class="d-block w-100" alt="Imagen 2">
+                            <img src="Imagenes/imagindex2.jpg" class="d-block w-100" alt="Imagen 2">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Manejo del Estrés</h5>
                                 <p>Herramientas y consejos prácticos para reducir el estrés.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="image3.jpg" class="d-block w-100" alt="Imagen 3">
+                            <img src="Imagenes/indimg.webp" class="d-block w-100" alt="Imagen 3">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Historias Inspiradoras</h5>
                                 <p>Lecturas motivadoras para tu bienestar emocional.</p>
@@ -123,9 +123,31 @@
 
                 <!-- Aquí puedes agregar más contenido debajo del carrusel -->
                 <section>
-                    <h2>Bienvenido a SM Armonía y Equilibrio</h2>
-                    <p>Encuentra recursos para tu bienestar emocional.</p>
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <h2>Bienvenido a SM Armonía y Equilibrio</h2>
+                        </div>
+                        <div class="card-body">
+                            <p>
+                                En SM Armonía y Equilibrio, sabemos que el bienestar emocional es clave para una vida plena y equilibrada. Por eso, hemos creado este espacio con el objetivo de acompañarte en tu camino hacia el equilibrio y la salud mental.
+                            </p>
+                            <p>
+                                Aquí encontrarás el apoyo que necesitas a través de contenidos diseñados especialmente para ti. Contamos con un equipo de psicólogos altamente capacitados, dispuestos a brindarte orientación personalizada. Además, ofrecemos blogs y artículos con herramientas y consejos prácticos para gestionar tus emociones y pensamientos.
+                            </p>
+                            <p>
+                                También compartimos historias motivadoras de personas que han superado grandes desafíos, inspirándote a seguir adelante. En nuestra sección de <em>Libros recomendados</em>, podrás descubrir lecturas que enriquecerán tu desarrollo personal.
+                            </p>
+                            <p>
+                                Conoce a los <strong>fundadores de SM Armonía y Equilibrio</strong>, quienes están profundamente comprometidos con tu bienestar. 
+                            </p>
+                            <p>
+                                Te invitamos a explorar nuestro sitio y descubrir los recursos que mejor se adapten a tus necesidades. En <strong>SM Armonía y Equilibrio</strong>, tu bienestar es nuestra misión.
+                            </p>
+                        </div>
+                    </div>
                 </section>
+                                              
+                
             </main>
         </div>
     </div>
