--- a/Grupo 3/Historias.html
+++ b/Grupo 3/Historias.html
@@ -83,9 +83,9 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 Libros!
                             </a>
-                            <a class="nav-link" href="tables.html">
+                            <a class="nav-link" href="Fundadores.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                                Tables
+                                Fundadores
                             </a>
                     </div>
                 </div>
