--- a/Grupo 3/Fundadores.html
+++ b/Grupo 3/Fundadores.html
@@ -114,7 +114,7 @@
         
         <div class="fundador">
             <h3>Sebastián Rodríguez Arce</h3>
-            <p>Co-fundador y Director General. Con una amplia experiencia en psicología y gestión de equipos, Sebastián se dedica a la innovación en el ámbito de la salud mental y el bienestar emocional.</p>
+            <p>Fundador y Director General. Con una amplia experiencia en psicología y gestión de equipos, Sebastián se dedica a la innovación en el ámbito de la salud mental y el bienestar emocional.</p>
         </div>
 
         <hr class="separador" />
@@ -122,21 +122,21 @@
         
         <div class="fundador">
             <h3>Manrique Torres Castillo</h3>
-            <p>Co-fundador y Director de Investigación. Manrique tiene un enfoque en la investigación sobre el manejo del estrés y la mejora de las capacidades emocionales, con el objetivo de desarrollar soluciones basadas en evidencia.</p>
+            <p> Fundador y Director de Tecnología. Sebastián lidera la creación de plataformas digitales que permiten a las personas acceder a recursos y profesionales de la salud emocional de manera eficiente y accesible.</p>
         </div>
 
         <hr class="separador" />
 
         <div class="fundador">
             <h3>Sebastián Solís</h3>
-            <p>Co-fundador y Director de Tecnología. Sebastián lidera la creación de plataformas digitales que permiten a las personas acceder a recursos y profesionales de la salud emocional de manera eficiente y accesible.</p>
+            <p>Fundador y Director de Investigación. Manrique tiene un enfoque en la investigación sobre el manejo del estrés y la mejora de las capacidades emocionales, con el objetivo de desarrollar soluciones basadas en evidencia.</p>
         </div>
 
         <hr class="separador" />
 
         <div class="fundador">
             <h3>Deivit Fernández</h3>
-            <p>Co-fundador y Director de Marketing. Deivit se encarga de posicionar la marca de SM Armonía y Equilibrio en el mercado, buscando conectar con las personas a través de campañas estratégicas.</p>
+            <p>Fundador y Director de Marketing. Deivit se encarga de posicionar la marca de SM Armonía y Equilibrio en el mercado, buscando conectar con las personas a través de campañas estratégicas.</p>
         </div>
     </div>
 </section>
