--- a/Grupo 3/login.html
+++ b/Grupo 3/login.html
@@ -20,13 +20,13 @@
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Iniciar Sesion</h3></div>
                                     <div class="card-body">
-                                        <form>
+                                        <form id="formLogin" method="post">
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
+                                                <input class="form-control" id="inputEmail" name="correo" type="email" placeholder="Correo Electrónico" required />
                                                 <label for="inputEmail">Correo Electronico</label>
                                             </div>
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputPassword" type="password" placeholder="Password" />
+                                                <input class="form-control" id="inputPassword" name="contrasena" type="password" placeholder="Contraseña" required />
                                                 <label for="inputPassword">Contraseña</label>
                                             </div>
                                             <div class="form-check mb-3">
@@ -35,7 +35,7 @@
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                                 <a class="small" href="password.html">Olvidaste la contraseña?</a>
-                                                <a class="btn btn-primary" href="index.html">Iniciar Sesion</a>
+                                                <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
                                             </div>
                                         </form>
                                     </div>
@@ -64,6 +64,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
-    </body>
+        <script src="js/login_funcional.js"></script>
+</body>
 </html>
