--- a/Grupo 3/register.html
+++ b/Grupo 3/register.html
@@ -20,29 +20,29 @@
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Crear Cuenta</h3></div>
                                     <div class="card-body">
-                                        <form>
+                                        <form id="formRegistro" method="post">
                                             <div class="row mb-3">
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
-                                                        <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" />
+                                                        <input class="form-control" id="inputFirstName" name="nombre" type="text" placeholder="Enter your first name" />
                                                         <label for="inputFirstName">Nombre</label>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-floating">
-                                                        <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" />
+                                                        <input class="form-control" id="inputLastName" name="apellido" type="text" placeholder="Enter your last name" />
                                                         <label for="inputLastName">Apellidos</label>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
+                                                <input class="form-control" id="inputEmail" name="correo" type="email" placeholder="name@example.com" />
                                                 <label for="inputEmail">Correo Electrónico</label>
                                             </div>
                                             <div class="row mb-3">
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
-                                                        <input class="form-control" id="inputPassword" type="password" placeholder="Create a password" />
+                                                        <input class="form-control" id="inputPassword" name="contrasena" type="password" placeholder="Create a password" />
                                                         <label for="inputPassword">Contraseña</label>
                                                     </div>
                                                 </div>
@@ -54,7 +54,8 @@
                                                 </div>
                                             </div>
                                             <div class="mt-4 mb-0">
-                                                <div class="d-grid"><a class="btn btn-primary btn-block" href="login.html">Crear cuenta</a></div>
+                                                <div class="d-grid">
+                                                    <button type="submit" class="btn btn-primary btn-block" href="login.html">Crear cuenta</a></div>
                                             </div>
                                         </form>
                                     </div>
@@ -83,6 +84,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
-    </body>
+        <script src="js/registro.js"></script>
+</body>
 </html>
