--- a/Grupo 3/password.html
+++ b/Grupo 3/password.html
@@ -18,22 +18,26 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Password Recovery</h3></div>
-                                    <div class="card-body">
-                                        <div class="small mb-3 text-muted">Enter your email address and we will send you a link to reset your password.</div>
-                                        <form>
-                                            <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
-                                                <label for="inputEmail">Email address</label>
-                                            </div>
-                                            <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="login.html">Return to login</a>
-                                                <a class="btn btn-primary" href="login.html">Reset Password</a>
-                                            </div>
+                                    <div class="card-header">
+                                        <h3>Restablecer contraseña</h3>
+                                        <form id="formRecuperar" method="post">
+                                          <div class="mb-3">
+                                            <input type="email" class="form-control" name="correo" placeholder="Correo electrónico registrado" required>
+                                          </div>
+                                          <div class="mb-3">
+                                            <input type="text" class="form-control" name="apellido" placeholder="Apellido registrado" required>
+                                          </div>
+                                          <div class="mb-3">
+                                            <input type="password" class="form-control" id="nueva_contrasena" name="nueva_contrasena" placeholder="Nueva contraseña" required>
+                                          </div>
+                                          <div class="mb-3">
+                                            <input type="password" class="form-control" id="confirmar_contrasena" placeholder="Confirmar nueva contraseña" required>
+                                          </div>
+                                          <button type="submit" class="btn btn-primary">Restablecer</button>
                                         </form>
                                     </div>
                                     <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                                        <div class="small"><a href="register.html">Necesitas una cuenta? Registrate!</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -45,7 +49,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2023</div>
+                            <div class="text-muted">Copyright &copy; Proyecto Grupo 3</div>
                             <div>
                                 <a href="#">Privacy Policy</a>
                                 &middot;
@@ -57,6 +61,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
-    </body>
+    <script src="js/recuperar.js"></script>
+</body>
 </html>
