--- a/Grupo 3/Libros.html
+++ b/Grupo 3/Libros.html
@@ -94,9 +94,21 @@
                 </div>
             </nav>
         </div>
+        <!-- prueba aca -->
+
+
+
         <main>
+            
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Libros Recomendados</h1>
+                <div class="d-flex justify-content-between align-items-center mt-4 mb-3">
+                    <h1 class="mb-0">Libros Recomendados</h1>
+                    <div>
+                        <button class="btn btn-primary me-2">Agregar</button>
+                        <button class="btn btn-primary">Eliminar</button>
+                    </div>
+            </div>
+                
                 <div class="book-container">
                     <!-- libro 1 -->
                     <a href="https://www.amazon.com/-/es/Los-dones-imperfecci%C3%B3n-coraz%C3%B3n-realmente/dp/8484456560"
