--- a/Grupo 3/Psicologos.html
+++ b/Grupo 3/Psicologos.html
@@ -96,7 +96,18 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid px-4">
-                    <h1 class="mt-4">Psicólogos</h1>
+                    <div class="d-flex justify-content-between align-items-center mt-4 mb-3">
+                        <h1 class="mb-0">Psicólogos</h1>
+                        <div>
+                            <a href="agregar_psicologo.php">
+                              <button class="btn btn-primary me-2">Agregar</button>
+                            </a>
+                            <a href="eliminar_psicologo.php">
+                              <button class="btn btn-primary">Eliminar</button>
+                            </a>
+                          </div>
+                          
+                    </div>
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
                         <li class="breadcrumb-item active">Psicólogos</li>
