--- a/Grupo 3/Psicologos.html
+++ b/Grupo 3/Psicologos.html
@@ -99,13 +99,10 @@
                     <div class="d-flex justify-content-between align-items-center mt-4 mb-3">
                         <h1 class="mb-0">Psicólogos</h1>
                         <div>
-                            <a href="agregar_psicologo.php">
-                              <button class="btn btn-primary me-2">Agregar</button>
-                            </a>
-                            <a href="eliminar_psicologo.php">
-                              <button class="btn btn-primary">Eliminar</button>
-                            </a>
+                            <a href="agregar_psicologo.php" class="btn btn-primary me-2">Agregar</a>
+                            <a href="eliminar_psicologo.php" class="btn btn-primary">Eliminar</a>
                           </div>
+                          
                           
                     </div>
                     <ol class="breadcrumb mb-4">
