Cambios en html

--- a/Grupo 3/Fundadores.html
+++ b/Grupo 3/Fundadores.html
@@ -35,8 +35,8 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#!">Configuracion</a></li>
-                    <li><a class="dropdown-item" href="#!">iniciar sesion</a></li>
+                    <li><a class="dropdown-item" href="register.html">Configuracion</a></li>
+                    <li><a class="dropdown-item" href="login.html">iniciar sesion</a></li>
                     <li>
                         <hr class="dropdown-divider" />
                     </li>
@@ -122,14 +122,14 @@
         
         <div class="fundador">
             <h3>Manrique Torres Castillo</h3>
-            <p> Fundador y Director de Tecnología. Sebastián lidera la creación de plataformas digitales que permiten a las personas acceder a recursos y profesionales de la salud emocional de manera eficiente y accesible.</p>
+            <p> Fundador y Director de Tecnología. Manrique lidera la creación de plataformas digitales que permiten a las personas acceder a recursos y profesionales de la salud emocional de manera eficiente y accesible.</p>
         </div>
 
         <hr class="separador" />
 
         <div class="fundador">
             <h3>Sebastián Solís</h3>
-            <p>Fundador y Director de Investigación. Manrique tiene un enfoque en la investigación sobre el manejo del estrés y la mejora de las capacidades emocionales, con el objetivo de desarrollar soluciones basadas en evidencia.</p>
+            <p>Fundador y Director de Investigación. Sebastian tiene un enfoque en la investigación sobre el manejo del estrés y la mejora de las capacidades emocionales, con el objetivo de desarrollar soluciones basadas en evidencia.</p>
         </div>
 
         <hr class="separador" />
