--- a/Grupo 3/Libros.html
+++ b/Grupo 3/Libros.html
@@ -35,8 +35,8 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#!">Configuracion</a></li>
-                    <li><a class="dropdown-item" href="#!">iniciar sesion</a></li>
+                    <li><a class="dropdown-item" href="register.html">Configuracion</a></li>
+                    <li><a class="dropdown-item" href="login.html">iniciar sesion</a></li>
                     <li>
                         <hr class="dropdown-divider" />
                     </li>
@@ -73,7 +73,7 @@
 
                         </div>
                         <a class="nav-link" href="Historias.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                             Historias Motivadoras!
                         </a>
 
