--- a/Grupo 3/Psicologos.html
+++ b/Grupo 3/Psicologos.html
@@ -72,7 +72,7 @@
 
                         </div>
                         <a class="nav-link" href="Historias.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                             Historias Motivadoras!
                         </a>
 
