--- a/Grupo 3/index.html
+++ b/Grupo 3/index.html
@@ -63,7 +63,7 @@
                         </div>
 
                         <a class="nav-link" href="Historias.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                             Historias Motivadoras!
                         </a>
 
