--- a/ProyectoWeb/Historias.html
+++ b/ProyectoWeb/Historias.html
@@ -21,7 +21,7 @@
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
-        <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+        <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0" id="formHistoria">
             <div class="input-group">
                 <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..."
                     aria-describedby="btnNavbarSearch" />
@@ -35,8 +35,8 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="register.html">Configuracion</a></li>
-                    <li><a class="dropdown-item" href="login.html">iniciar sesion</a></li>
+                    <li><a class="dropdown-item" href="#!">Configuracion</a></li>
+                    <li><a class="dropdown-item" href="#!">iniciar sesion</a></li>
                     <li>
                         <hr class="dropdown-divider" />
                     </li>
@@ -441,6 +441,7 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
     <script src="js/datatables-simple-demo.js"></script>
+<script src="js/historia.js"></script>
 </body>
 
 </html>
