--- a/ProyectoWeb/Libros.html
+++ b/ProyectoWeb/Libros.html
@@ -22,7 +22,7 @@
                 class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-            <div class="input-group">
+            <div class="input-group" id="librosContainer">
                 <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..."
                     aria-describedby="btnNavbarSearch" />
                 <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i
@@ -35,8 +35,8 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="register.html">Configuracion</a></li>
-                    <li><a class="dropdown-item" href="login.html">iniciar sesion</a></li>
+                    <li><a class="dropdown-item" href="#!">Configuracion</a></li>
+                    <li><a class="dropdown-item" href="#!">iniciar sesion</a></li>
                     <li>
                         <hr class="dropdown-divider" />
                     </li>
@@ -73,7 +73,7 @@
 
                         </div>
                         <a class="nav-link" href="Historias.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Historias Motivadoras!
                         </a>
 
@@ -94,21 +94,9 @@
                 </div>
             </nav>
         </div>
-        <!-- prueba aca -->
-
-
-
         <main>
-            
             <div class="container-fluid px-4">
-                <div class="d-flex justify-content-between align-items-center mt-4 mb-3">
-                    <h1 class="mb-0">Libros Recomendados</h1>
-                    <div>
-                        <button class="btn btn-primary me-2">Agregar</button>
-                        <button class="btn btn-primary">Eliminar</button>
-                    </div>
-            </div>
-                
+                <h1 class="mt-4">Libros Recomendados</h1>
                 <div class="book-container">
                     <!-- libro 1 -->
                     <a href="https://www.amazon.com/-/es/Los-dones-imperfecci%C3%B3n-coraz%C3%B3n-realmente/dp/8484456560"
@@ -255,6 +243,7 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
     <script src="js/datatables-simple-demo.js"></script>
+<script src="js/libros.js"></script>
 </body>
 
 </html>
